k8s/argocd/argocd-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argocd
spec:
  parentRefs:
    - name: argocd-gateway
  rules:
    - backendRefs:
        - name: my-argo-cd-argocd-server
          port: 80
